--- a/notebooks/DataCleaning.ipynb
+++ b/notebooks/DataCleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 153,
    "id": "32cda1b0-ac75-4f44-a23d-0accb3d70027",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import os, sys\n",
     "import nd2\n",
     "import cv2 as cv\n",
+    "import pandas as pd\n",
     "import matplotlib.patches as patches\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 154,
    "id": "761e89f5-40ab-4cd6-9db4-c56f4e880d07",
    "metadata": {},
    "outputs": [
@@ -322,33 +323,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "06365d25-5da3-43e1-8eb8-4e14fa939bc6",
+   "metadata": {},
+   "source": [
+    "## Optimize"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "b99f07ef-fc51-44bb-9f2f-eee5f06f1b94",
+   "execution_count": 173,
+   "id": "ce2802f0-ee40-45c3-8fdf-c2797cb335ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([False,  True]), array([449, 151]))\n",
+      "Percentage labelled as 0.25166666666666665%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load in the manually labelled data\n",
+    "\n",
+    "our_truth = pd.read_csv('../data/outliers/LabelledOutliers_600_lou_11_11_22.csv')\n",
+    "\n",
+    "print(np.unique([our_truth['Outlier'] == True], return_counts=True))\n",
+    "\n",
+    "pctg = np.unique([our_truth['Outlier'] == True], return_counts=True)[1][1] / (np.unique([our_truth['Outlier'] == True], return_counts=True)[1][1] + np.unique([our_truth['Outlier'] == True], return_counts=True)[1][0])\n",
+    "\n",
+    "print( f'Percentage labelled as {pctg}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "dcaca595-a14b-4cad-9a9d-a9d5ccf28a0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indecies = our_truth['Index']\n",
+    "true_y = our_truth['Outlier']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "e2781a7f-ee41-4079-8e4c-4805a844b307",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[82.5, 71.5, 71.2],\n",
-       "       [60.5, 83.5, 61. ]], dtype=float32)"
+       "7298"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "621f33b6-52c7-4314-9f5a-0b2cfce0dd6a",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "circles"
+    "# default method\n",
+    "pred_y = []\n",
+    "\n",
+    "for idx in indecies:\n",
+    "    img = np.load(f'{config.ROOT_PATH}/data/clean/img{idx}.npy')\n",
+    "    img = img[img.shape[0]-1,:,:]\n",
+    "    \n",
+    "    # Put in openCV format\n",
+    "    img = (img / img.max()) * 255\n",
+    "    img = np.array(img, dtype = np.uint8)\n",
+    "    \n",
+    "    # Find circles\n",
+    "    circles = cv.HoughCircles(img, cv.HOUGH_GRADIENT, 1, 20,\n",
+    "                               param1=120, param2=30,\n",
+    "                               minRadius=20, maxRadius=img.shape[0]//2)\n",
+    "    if circles is None:\n",
+    "        circles = []\n",
+    "    else:\n",
+    "        circles = circles[0]\n",
+    "    fig_index += 1\n",
+    "    circ_plots = []\n",
+    "    \n",
+    "    samp_ok = False\n",
+    "    for circ in circles:\n",
+    "        samp_ok = samp_ok or check_droplet(circ, dataset.droplet_list[idx])\n",
+    "        # Check if size is legit\n",
+    "    if samp_ok:\n",
+    "        pred_y.append(False)\n",
+    "    else:\n",
+    "        pred_y.append(True)\n",
+    "    "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cbfe40e3-062d-4e1c-9ce9-bc6dea5acfa0",
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "9c3a5a19-230d-4de9-847c-52bea8aafada",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8383333333333334\n",
+      "Precision: 0.6153846153846154\n",
+      "Recall: 0.9536423841059603\n"
+     ]
+    }
+   ],
    "source": [
-    "# Alibi-Detect Outlier Detection"
+    "from sklearn.metrics import confusion_matrix, recall_score, f1_score, accuracy_score, precision_score\n",
+    "\n",
+    "confusion_matrix(y_true=true_y, y_pred= pred_y)\n",
+    "\n",
+    "print(f'Accuracy: {accuracy_score(y_true=true_y, y_pred=pred_y)}')\n",
+    "print(f'Precision: {precision_score(y_true=true_y, y_pred=pred_y)}')\n",
+    "print(f'Recall: {recall_score(y_true=true_y, y_pred=pred_y)}')\n",
+    "\n",
+    "# high recall low precision just like we wanted "
    ]
   },
   {
@@ -356,48 +460,659 @@
    "id": "634613f5-eeef-4211-b781-518e15adb0bb",
    "metadata": {},
    "source": [
-    "### The following methods are supported for image outlier detection:\n",
-    "1. AE\n",
-    "2. VAE\n",
-    "3. AEGMM\n",
-    "4. VAEGMM\n",
-    "5. Likelihood Ratios"
+    "## Evaluate Quality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 202,
    "id": "882dc24d-8a2d-404a-a9a7-4f294b2898dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1       True\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "595    False\n",
+       "596    False\n",
+       "597     True\n",
+       "598    False\n",
+       "599    False\n",
+       "Name: Outlier, Length: 600, dtype: bool"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#!pip install alibi-detect[torch]\n",
-    "#!pip install -Iv numpy==1.22.1\n",
-    "\n",
-    "#import pkg_resources\n",
-    "import alibi_detect as alibi\n"
+    "true_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 203,
    "id": "dc41b552-cd3b-4a05-bc9b-d8d879273721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.10.4'"
+       "[True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " False,\n",
+       " True]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lord have mercy\n",
-    "from alibi_detect.od import "
+    "pred_y"
    ]
   },
   {
